--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,6 @@ asyncio>=3.4.3
 pathlib>=1.0.1
 
 # Optional but recommended
-typing>=3.7.4.3  # for type hints 
+typing>=3.7.4.3  # for type hints
+
+ollama
